@@ -1,6 +1,7 @@
 Revision history for Module::Provision
 
 0.9.8     2013-05-03 15:11:01
+          - Bob removes MANIFEST.bak with distclean
           - Abstracted builders with ::Base
           - Updated README.md
           - Fixed test
